--- a/application/index/view/blueprint/process.html
+++ b/application/index/view/blueprint/process.html
@@ -81,8 +81,8 @@
               </td>
                 <td>
                     <!--<a title="详" onclick="x_admin_show('工序详情 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">详</i></a>-->
-                    <a title="改" onclick="x_admin_show('修改工序 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon">改</i></a>
-                    <a title="删" onclick="delete_process(this,'{$processInfoList.id}','{$processInfoList.drawing_detial_id}')"><i class="layui-icon">删</i></a>
+                    <a title="修改" onclick="x_admin_show('修改工序 <span class=\'layui-badge layui-bg-blue\'>{$processInfoList.process_id}</span> 修改操作','{:url(\'index/blueprint/editProcess\',[\'id\'=>$processInfoList.id])}',450)" href="javascript:;"><i class="layui-icon" style="color: green">&#xe642;</i></a>
+                    <a title="删除" onclick="delete_process(this,'{$processInfoList.id}','{$processInfoList.drawing_detial_id}')"><i class="layui-icon" style="color:red"></i></a>
                 </td>
               <td>
                 <?php echo substr($processInfoList['process_id'],strpos($processInfoList['process_id'],'P')+1); ?>
