--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -86,7 +86,7 @@
             <li>
                 <a href="javascript:;">
                     <i class="iconfont">&#xe6f6;</i>
-                    <cite>基础信息菜单</cite>
+                    <cite>基础信息</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
                 <ul class="sub-menu">
@@ -97,9 +97,9 @@
                         </a>
                     </li >
                     <li>
-                        <a _href="{:url('index/storehouse/purchase')}">
+                        <a _href="{:url('index/LoolingType/loolingInfo')}">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>外购产品</cite>
+                            <cite>工装类型</cite>
                         </a>
                     </li >
                 </ul>
@@ -118,7 +118,7 @@
                         </a>
                     </li >
                     <li>
-                        <a _href="{:url('index/blueprint/blueprintInterior')}">
+                        <a _href="{:url('index/Internal/internalInfo')}">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>内部图纸</cite>
                         </a>
@@ -130,9 +130,9 @@
                         </a>
                     </li >
                     <li>
-                        <a _href="{:url('index/mould/mould')}">
+                        <a _href="{:url('index/Assembly/assemblyInfo')}">
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>磨具管理</cite>
+                            <cite>组件图纸</cite>
                         </a>
                     </li >
                 </ul>
