--- a/application/index/view/assembly/assembly-edit.html
+++ b/application/index/view/assembly/assembly-edit.html
@@ -5,7 +5,8 @@
         <div class="layui-form-item">
             <label class="layui-form-label">组件编号</label>
             <div class="layui-input-inline" >
-                <input type="text" class="layui-input" id="assembly_code" name="assembly_code" value="{$createId}" disabled >
+                <input type="text" class="layui-input" id="assembly_code" name="assembly_code" value="{$assemblyRow.assembly_code}" disabled >
+                <input type="hidden" name="id"  value="{$assemblyRow.id}">
             </div>
         </div>
         <div class="layui-form-item">
@@ -14,7 +15,11 @@
                 <select name="tooling_type" lay-verify="required">
                     <option value=""></option>
                     {volist name="loolingInfo" id="info"}
-                        <option value="{$info.id}">{$info.looling_type_name}</option>
+                        <option value="{$info.id}"
+                            {if $assemblyRow.tooling_type == $info.id }
+                                selected
+                            {/if}
+                        >{$info.looling_type_name}</option>
                     {/volist}
                 </select>
             </div>
@@ -22,20 +27,20 @@
         <div class="layui-form-item layui-form-text">
             <label class="layui-form-label">备注</label>
             <div class="layui-input-block">
-                <textarea class="layui-textarea"  name="remark"></textarea>
+                <textarea class="layui-textarea"  name="remark">{$assemblyRow.remark}</textarea>
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label">创建人</label>
+            <label class="layui-form-label">修改人</label>
             <div class="layui-input-inline">
-                <input type="text" class="layui-input" id="create_name" name="create_name" value="ADMIN" disabled >
+                <input type="text" class="layui-input" id="modify_name" name="modify_name" value="ADMIN" disabled >
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">
             </label>
             <button class="layui-btn" lay-submit lay-filter="addId">
-                增加
+                修改
             </button>
         </div>
     </form>
@@ -47,9 +52,9 @@
         //监听提交
         form.on('submit(addId)', function(data){
             //console.log(data);
-            $.post("{:url('index/Assembly/assemblyAdd')}",data.field,function(info){
+            $.post("{:url('index/Assembly/assemblyEdit')}",data.field,function(info){
                 if (info) {
-                    layer.alert("添加成功", {icon: 6},function () {
+                    layer.alert("修改成功", {icon: 6},function () {
                         window.parent.location.reload();  //刷新父级页面
                         // 获得frame索引
                         var index = parent.layer.getFrameIndex(window.name);
