完成内部图纸编号生成

--- a/application/index/view/internal/internal-add.html
+++ b/application/index/view/internal/internal-add.html
@@ -12,7 +12,7 @@
               <button type="button" class="layui-btn layui-btn-normal" id="model">切换模式</button>
               <button type="button" class="layui-btn layui-btn-normal" id="model1">切换模式</button>
               <div class="layui-input-inline" id="voluntarily">
-                  <select name="modules" lay-verify="required" lay-search="" id="selectMid">
+                  <select name="modules"  lay-search="" id="selectMid">
                       <option value=""></option>
                           {volist name="$assemblyInfo" id="info"}
                           <option value="{$info.id}">{$info.assembly_code}</option>
