完成内部图纸编号生成

--- a/application/index/view/internal/internal-add.html
+++ b/application/index/view/internal/internal-add.html
@@ -58,7 +58,7 @@
             </div>
           <div class="layui-form-item">
               <label class="layui-form-label"></label>
-              <button class="layui-btn" lay-submit lay-filter="addId">
+              <button class="layui-btn" lay-submit lay-filter="addId" disabled>
                   增加
               </button>
           </div>
@@ -88,27 +88,27 @@
           $ = layui.jquery;
           var form = layui.form,layer = layui.layer;
 
-          //监听提交
-          form.on('submit(addId)', function(data){
-            //console.log(data);
-              $.post("{:url('index/Blueprint/addDrawingExternalId')}",data.field,function(info){
-                  if (info) {
-                      layer.alert("添加成功", {icon: 6},function () {
-                          window.parent.location.reload();  //刷新父级页面
-                          // 获得frame索引
-                          var index = parent.layer.getFrameIndex(window.name);
-                          //关闭当前弹出层
-                          parent.layer.close(index);
-                      });
-                  }else{
-                      layer.alert("添加失败", {icon: 5});
-                  }
-              },'json');
-              return false;
-          });
-
-
-        });
+        //   //监听提交
+        //   form.on('submit(addId)', function(data){
+        //     //console.log(data);
+        //       $.post("{:url('index/Blueprint/addDrawingExternalId')}",data.field,function(info){
+        //           if (info) {
+        //               layer.alert("添加成功", {icon: 6},function () {
+        //                   window.parent.location.reload();  //刷新父级页面
+        //                   // 获得frame索引
+        //                   var index = parent.layer.getFrameIndex(window.name);
+        //                   //关闭当前弹出层
+        //                   parent.layer.close(index);
+        //               });
+        //           }else{
+        //               layer.alert("添加失败", {icon: 5});
+        //           }
+        //       },'json');
+        //       return false;
+        //   });
+        //
+        //
+        // });
     </script>
 
   </body>
