--- a/application/index/view/internal/internal-add.html
+++ b/application/index/view/internal/internal-add.html
@@ -58,7 +58,7 @@
             </div>
           <div class="layui-form-item">
               <label class="layui-form-label"></label>
-              <button class="layui-btn" lay-submit lay-filter="addId" disabled>
+              <button class="layui-btn" lay-submit lay-filter="addId">
                   增加
               </button>
           </div>
@@ -83,10 +83,10 @@
             });
         });
 
-
-        layui.use(['form'], function(){
-          $ = layui.jquery;
-          var form = layui.form,layer = layui.layer;
+        //
+        // layui.use(['form'], function(){
+        //   $ = layui.jquery;
+        //   var form = layui.form,layer = layui.layer;
 
         //   //监听提交
         //   form.on('submit(addId)', function(data){
